Post NIAD-3151 refactoring (#927)
* small logging statement improvement

* small test refactoring optimization